--- a/PaulVacationTracker/app/src/main/AndroidManifest.xml
+++ b/PaulVacationTracker/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".EmployeeVacationDetailActivity"
+            android:label="@string/title_activity_employee_vacation_detail"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
